# bits-language

./: .clang-format  .clangd  .cmake-format.py  .gitignore  CMakeLists.txt  README.md  bits.code-workspace
include/: bitslangconfig.h.in  chunk.hpp  common.hpp  sysexits.hpp
src/: chunk.cpp  chunk.hpp  common.hpp  compiler.cpp  compiler.hpp  debug.cpp  debug.hpp  main.cpp  scanner.cpp  scanner.hpp  value.cpp  value.hpp  virtualmachine.cpp  virtualmachine.hpp
tests/src/: main.cpp
